--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup mdBook
         uses: peaceiris/actions-mdbook@v1
         with:
-          mdbook-version: '0.5.0-beta.1'  # 建议指定一个稳定版本
+          mdbook-version: '0.5.0-beta.1'
 
       - name: Build with mdBook
         run: | 
