fix CNAME file lost issue

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,6 +23,8 @@ jobs:
         run: | 
             mdbook clean
             mdbook build
+      - name: Copy CNAME to book directory
+        run: cp CNAME ./book/CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
